--- a/1.Login/style.css
+++ b/1.Login/style.css
@@ -1,9 +1,64 @@
 .title {
     font-family: 'Poppins';
+    color: #4c8bf5;
 }
+
+.container-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.input-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
 .login {
     width: 100%;
     margin-bottom: 20px;
     height: 40px;
 }
+
+label {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.2em;
+    font-weight: 600;
+    margin-bottom: 0.5em;
+    display: block;
+    color: #4c8bf5;
+  }
+
+  .login {
+    padding: 0.5em;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    font-family: "Poppins", sans-serif;
+    font-size: 1em;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .login:focus {
+    outline: none;
+    border: 2px solid #4c8bf5;
+    box-shadow: 0px 0px 4px #4c8bf5;
+  }
+
+  .button {
+    background-color: #4c8bf5;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0.8em 1.5em;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .button:hover {
+    background-color: #3669c9;
+  }
