--- a/1.Login/style.css
+++ b/1.Login/style.css
@@ -1,6 +1,11 @@
+html {
+  background-color: #fcfcfc;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='34' height='44' viewBox='0 0 34 44'%3E%3Cg fill='%23e3dfdf' fill-opacity='0.44'%3E%3Cpath fill-rule='evenodd' d='M1 6.2C.72 5.55.38 4.94 0 4.36v13.28c.38-.58.72-1.2 1-1.84A12.04 12.04 0 0 0 7.2 22 12.04 12.04 0 0 0 1 28.2c-.28-.65-.62-1.26-1-1.84v13.28c.38-.58.72-1.2 1-1.84A12.04 12.04 0 0 0 7.2 44h21.6a12.05 12.05 0 0 0 5.2-4.36V26.36A12.05 12.05 0 0 0 28.8 22a12.05 12.05 0 0 0 5.2-4.36V4.36A12.05 12.05 0 0 0 28.8 0H7.2A12.04 12.04 0 0 0 1 6.2zM17.36 23H12a10 10 0 1 0 0 20h5.36a11.99 11.99 0 0 1 0-20zm1.28-2H24a10 10 0 1 0 0-20h-5.36a11.99 11.99 0 0 1 0 20zM12 1a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 14a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-3.46-2a2 2 0 1 0-3.47 2 2 2 0 0 0 3.47-2zm0-4a2 2 0 1 0-3.47-2 2 2 0 0 0 3.47 2zM12 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3.46 2a2 2 0 1 0 3.47-2 2 2 0 0 0-3.47 2zm0 4a2 2 0 1 0 3.47 2 2 2 0 0 0-3.47-2zM24 43a10 10 0 1 0 0-20 10 10 0 0 0 0 20zm0-14a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3.46 2a2 2 0 1 0 3.47-2 2 2 0 0 0-3.47 2zm0 4a2 2 0 1 0 3.47 2 2 2 0 0 0-3.47-2zM24 37a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-3.46-2a2 2 0 1 0-3.47 2 2 2 0 0 0 3.47-2zm0-4a2 2 0 1 0-3.47-2 2 2 0 0 0 3.47 2z'/%3E%3C/g%3E%3C/svg%3E");
+}
+
 .title {
     font-family: 'Poppins';
-    color: #4c8bf5;
+    color: #c1071e;
 }
 
 .container-title {
@@ -27,7 +32,7 @@ label {
     font-weight: 600;
     margin-bottom: 0.5em;
     display: block;
-    color: #4c8bf5;
+    color: #c1071e;
   }
 
   .login {
@@ -42,12 +47,12 @@ label {
 
   .login:focus {
     outline: none;
-    border: 2px solid #4c8bf5;
-    box-shadow: 0px 0px 4px #4c8bf5;
+    border: 2px solid #c1071e;
+    box-shadow: 0px 0px 4px #c1071e;
   }
 
   .button {
-    background-color: #4c8bf5;
+    background-color: #c1071e;
     color: white;
     font-family: "Poppins", sans-serif;
     font-size: 1em;
@@ -60,5 +65,9 @@ label {
   }
 
   .button:hover {
-    background-color: #3669c9;
+    background-color: #c1071e;
+  }
+
+  .logo {
+    width: 500px;
   }
