--- a/7.WebSocket/style.css
+++ b/7.WebSocket/style.css
@@ -104,13 +104,56 @@
     text-align: center;
   }
 
-  .container-view2 {
+  .container-view {
     color: black;
-    padding: 100px;
+    padding: 30px;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    border-radius: 10%;
+  }
+
+  .view-labels {
+    font-family: 'Poppins';
+    font-size: 25px;
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+
+  .view-inputs {
+    padding: 0.5em;
+    border-radius: 10px;
+    border: 2px solid #c1071e;
+    font-family: "Poppins", sans-serif;
+    font-size: 1em;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 20px;
+  }
+
+  .view-button {
+    background-color: #c1071e;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 0.8em 1.5em;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+  }
+
+  .view-p {
+    font-family: "Poppins", sans-serif;
+  }
+
+  .invisible {
+    display: none;
+    visibility: hidden;
   }
