--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ html {
     text-align: center;
     font-size: large;
     font-family: "Poppins", sans-serif;
+    padding: 20px;
 }
 
 .column {
